--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,8 @@
 
 <ul>
   <% @lists.each do |l| %>
-     <li><%= l.name %></li>
+     <li><%= link_to l.name, list_path(l) %></li>
   <% end %>
 </ul>
+
+<%= link_to 'create a new list', new_list_path %>
